--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid black;
+  display: inline-block;
+  /* text-align: center; */
+  margin-left: 518px;
+  margin-top: 75px;
+}
+.input {
+  margin: 7px 10px;
+  padding: 7px;
+  width: 429px;
+  border-radius: 6px;
+  font-size: 20px;
+  text-align: left;
+}
+label {
+  font-size: 21px;
+  padding: 0 0 0px 18px;
+  font-style: oblique;
+  font-weight: 500;
+}
+h2{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+select {
+  margin: 7px 10px;
+  padding: 7px;
+  width: 445px;
+  border-radius: 6px;
+  font-size: 20px;
+  text-align: left;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn {
+  padding: 6px 9px;
+  padding: 5px;
+  margin-top: 33px;
+  width: 140px;
+  font-size: 17px;
+  font-weight: 600;
+  margin-left: 161px;
+  color: #fff;
+  background-color: teal;
+  border-radius: 6px;
+  margin-bottom: 23px;
 }
